Parser/errors/tre.txt
Making all in m4
make[2]: Nothing to be done for 'all'.
+ cd python
+ python2 setup.py build
running build
running build_ext
running build_ext
building 'tre' extension
building 'tre' extension
creating build
creating build
creating build/temp.linux-x86_64-2.7
creating build/temp.linux-x86_64-2.7
x86_64-alt-linux-gcc -fno-strict-aliasing -pipe -frecord-gcc-switches -Wall -g -O3 -flto=auto -ffat-lto-objects -DNDEBUG -pipe -frecord-gcc-switches -Wall -g -O3 -flto=auto -ffat-lto-objects -fwrapv -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -fPIC -DHAVE_CONFIG_H -I../lib -I/usr/include/python2.7 -c tre-python.c -o build/temp.linux-x86_64-2.7/tre-python.o
x86_64-alt-linux-gcc -fno-strict-aliasing -pipe -frecord-gcc-switches -Wall -g -O3 -flto=auto -ffat-lto-objects -DNDEBUG -pipe -frecord-gcc-switches -Wall -g -O3 -flto=auto -ffat-lto-objects -fwrapv -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -fPIC -DHAVE_CONFIG_H -I../lib -I/usr/include/python2.7 -c tre-python.c -o build/temp.linux-x86_64-2.7/tre-python.o
tre-python.c:270:3: error: initialization of 'PyObject * (*)(PyObject *, Py_ssize_t)' {aka 'struct _object * (*)(struct _object *, long int)'} from incompatible pointer type 'PyObject * (*)(PyObject *, int)' {aka 'struct _object * (*)(struct _object *, int)'} [-Wincompatible-pointer-types]
tre-python.c:270:3: error: initialization of 'PyObject * (*)(PyObject *, Py_ssize_t)' {aka 'struct _object * (*)(struct _object *, long int)'} from incompatible pointer type 'PyObject * (*)(PyObject *, int)' {aka 'struct _object * (*)(struct _object *, int)'} [-Wincompatible-pointer-types]
  270 |   PyTreMatch_groupi, /* sq_item */
  270 |   PyTreMatch_groupi, /* sq_item */
      |   ^~~~~~~~~~~~~~~~~
      |   ^~~~~~~~~~~~~~~~~
tre-python.c:270:3: note: (near initialization for 'TreMatch_as_sequence_methods.sq_item')
tre-python.c:270:3: note: (near initialization for 'TreMatch_as_sequence_methods.sq_item')
tre-python.c: In function 'PyTrePattern_search':
tre-python.c: In function 'PyTrePattern_search':
tre-python.c:377:28: error: passing argument 1 of 'PyUnicodeUCS2_AsWideChar' from incompatible pointer type [-Wincompatible-pointer-types]
tre-python.c:377:28: error: passing argument 1 of 'PyUnicodeUCS2_AsWideChar' from incompatible pointer type [-Wincompatible-pointer-types]
  377 |       PyUnicode_AsWideChar(pstring, buf, len);
  377 |       PyUnicode_AsWideChar(pstring, buf, len);
  377 |       PyUnicode_AsWideChar(pstring, buf, len);
      |                            ^~~~~~~
      |                            ^~~~~~~
      |                            ^~~~~~~
      |                            |
      |                            |
      |                            |
      |                            PyObject * {aka struct _object *}
      |                            PyObject * {aka struct _object *}
      |                            PyObject * {aka struct _object *}
In file included from /usr/include/python2.7/Python.h:88,
In file included from /usr/include/python2.7/Python.h:88,
In file included from /usr/include/python2.7/Python.h:88,
                 from tre-python.c:13:
                 from tre-python.c:13:
/usr/include/python2.7/unicodeobject.h:592:22: note: expected 'PyUnicodeObject *' but argument is of type 'PyObject *' {aka 'struct _object *'}
/usr/include/python2.7/unicodeobject.h:592:22: note: expected 'PyUnicodeObject *' but argument is of type 'PyObject *' {aka 'struct _object *'}
  592 |     PyUnicodeObject *unicode,   /* Unicode object */
  592 |     PyUnicodeObject *unicode,   /* Unicode object */
      |     ~~~~~~~~~~~~~~~~~^~~~~~~
      |     ~~~~~~~~~~~~~~~~~^~~~~~~
      |     ~~~~~~~~~~~~~~~~~^~~~~~~
tre-python.c: In function 'PyTre_ncompile':
tre-python.c: In function 'PyTre_ncompile':
tre-python.c: In function 'PyTre_ncompile':
tre-python.c: In function 'PyTre_ncompile':
tre-python.c:508:42: error: passing argument 1 of 'PyUnicodeUCS2_GetSize' from incompatible pointer type [-Wincompatible-pointer-types]
tre-python.c:508:42: error: passing argument 1 of 'PyUnicodeUCS2_GetSize' from incompatible pointer type [-Wincompatible-pointer-types]
tre-python.c:508:42: error: passing argument 1 of 'PyUnicodeUCS2_GetSize' from incompatible pointer type [-Wincompatible-pointer-types]
  508 |       Py_ssize_t len = PyUnicode_GetSize(upattern);
  508 |       Py_ssize_t len = PyUnicode_GetSize(upattern);
  508 |       Py_ssize_t len = PyUnicode_GetSize(upattern);
      |                                          ^~~~~~~~
      |                                          ^~~~~~~~
      |                                          ^~~~~~~~
      |                                          |
      |                                          |
      |                                          |
      |                                          PyUnicodeObject *
      |                                          PyUnicodeObject *
      |                                          PyUnicodeObject *
/usr/include/python2.7/unicodeobject.h:491:15: note: expected 'PyObject *' {aka 'struct _object *'} but argument is of type 'PyUnicodeObject *'
/usr/include/python2.7/unicodeobject.h:491:15: note: expected 'PyObject *' {aka 'struct _object *'} but argument is of type 'PyUnicodeObject *'
/usr/include/python2.7/unicodeobject.h:491:15: note: expected 'PyObject *' {aka 'struct _object *'} but argument is of type 'PyUnicodeObject *'
  491 |     PyObject *unicode           /* Unicode object */
  491 |     PyObject *unicode           /* Unicode object */
  491 |     PyObject *unicode           /* Unicode object */
      |     ~~~~~~~~~~^~~~~~~
      |     ~~~~~~~~~~^~~~~~~
      |     ~~~~~~~~~~^~~~~~~
      |     ~~~~~~~~~~^~~~~~~
error: command 'x86_64-alt-linux-gcc' failed with exit status 1
error: command 'x86_64-alt-linux-gcc' failed with exit status 1
error: command 'x86_64-alt-linux-gcc' failed with exit status 1
error: command 'x86_64-alt-linux-gcc' failed with exit status 1
error: Bad exit status from /usr/src/tmp/rpm-tmp.51520 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.51520 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.51520 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.51520 (%build)







RPM build errors:
RPM build errors:
RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.51520 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.51520 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.51520 (%build)
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
6.84user 4.63system 0:10.80elapsed 106%CPU (0avgtext+0avgdata 65332maxresident)k
6.84user 4.63system 0:10.80elapsed 106%CPU (0avgtext+0avgdata 65332maxresident)k
6.84user 4.63system 0:10.80elapsed 106%CPU (0avgtext+0avgdata 65332maxresident)k
0inputs+0outputs (0major+994720minor)pagefaults 0swaps
0inputs+0outputs (0major+994720minor)pagefaults 0swaps
0inputs+0outputs (0major+994720minor)pagefaults 0swaps
hsh-rebuild: rebuild of `tre-0.8.0-alt2.2.src.rpm' failed.
hsh-rebuild: rebuild of `tre-0.8.0-alt2.2.src.rpm' failed.
hsh-rebuild: rebuild of `tre-0.8.0-alt2.2.src.rpm' failed.
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
3.63user 2.48system 0:20.07elapsed 30%CPU (0avgtext+0avgdata 141544maxresident)k
3.63user 2.48system 0:20.07elapsed 30%CPU (0avgtext+0avgdata 141544maxresident)k
2528inputs+0outputs (0major+205312minor)pagefaults 0swaps
